--- a/css/style.css
+++ b/css/style.css
@@ -87,11 +87,11 @@ img {
   background: white;
 }
 
-.nova-tarefa {
+.form-tarefa {
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-bottom:40px;
+  margin-bottom: 40px;
 }
 
 .btn {
@@ -161,10 +161,13 @@ img {
 }
 
 .tarefa-item > div:first-child {
+  flex-shrink: 1;
+  min-width: 0;
+}
+
+.tarefa-item > div:first-child label {
   display: flex;
   align-items: center;
-  flex-grow: 1;
-  min-width: 0;
   gap: 20px;
 }
 
@@ -175,13 +178,12 @@ img {
   flex-shrink: 0;
 }
 
-.tarefa-item input[type="checkbox"]:checked + .visually-hidden + .tarefa-descricao {
+.tarefa-item input[type="checkbox"]:checked + .tarefa-descricao {
   text-decoration: line-through;
   color: var(--cor-8);
 }
 
 .tarefa-item .tarefa-descricao {
-  flex-grow: 1;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -193,7 +195,7 @@ img {
 }
 
 .tarefa-item .tarefa-descricao:hover {
-  transform: scale(1.01);
+  transform: scale(1.02);
   color: var(--cor-13);
 }
 
